--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,94 @@
-.App {
+div {
+  font-family: "Montserrat", sans-serif;
+  margin: 80;
+  background-color: rgb(255, 255, 255);
+}
+
+button {
+  font-size: 30px;
+  color: rgba(0, 0, 0, 0.602);
+  background-color: rgb(255, 255, 255);
+}
+
+.button-primary {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.videoWrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+}
+.videoWrapper iframe {
+  text-align: center;
+  width: 80%;
+  height: 400px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+img {
+  max-width: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+p {
+  margin-bottom: 30px;
+  font-size: 20px;
+  position: relative;
+  left: -100px;
+}
+
+h3 {
+  margin: 0;
+  font-size: 50px;
+}
+
+h4 {
+  font-size: 40px;
+  margin-bottom: 20px;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
+
+h5 {
+  margin: 10px 0;
+  font-size: 30px;
+  text-decoration: underline;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+h6 {
+  font-size: large;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+h7 {
+  font-size: 70%;
+}
+
+ul {
+  font-size: 85%;
+  padding-right: 5%;
+}
+
+.meal {
+  margin: 30px 0;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.videoWrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 25px;
+  height: 0;
+}
+
+.container {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.img-col {
+  flex-basis: 30%;
 }
